Added fallback image

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Loklang</title>
+    <title>Loklang</title>
 
     <link rel="stylesheet" href="./index.css" />
 </head>
@@ -11,7 +11,7 @@
     <aside>
         <div class="logo">Loklang</div>
         <nav>
-            <button class="nav-link" data-target="home">Home</button>
+            <!-- <button class="nav-link" data-target="home">Home</button> -->
             <button class="nav-link active" data-target="songs">Songs</button>
             <button class="nav-link" data-target="artists">Artists</button>
             <button class="nav-link" data-target="albums">Albums</button>
@@ -41,7 +41,7 @@
 
     <div class="play-bar">
         <div class="song-info">
-            <img src="" alt="" class="song-img" id="songImg" />
+            <img src="./images/404.png" alt="" class="song-img" id="songImg" />
             <div class="song-text">
                 <div id="songTitleEl" class="song-title">Some Song</div>
                 <div id="songArtistEl" class="song-artists">
