--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loklang</title>
 
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./dist/index.css" />
 </head>
 <body>
     <aside>
@@ -41,7 +41,7 @@
 
     <div class="play-bar">
         <div class="song-info">
-            <img src="./images/404.png" alt="" class="song-img" id="songImg" />
+            <img src="./dist/images/404.png" alt="" class="song-img" id="songImg" />
             <div class="song-text">
                 <div id="songTitleEl" class="song-title">Some Song</div>
                 <div id="songArtistEl" class="song-artists">
@@ -109,6 +109,6 @@
         </div>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./dist/index.js"></script>
 </body>
 </html>
